--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
   width: 100%;
   height: 100vh;
   box-sizing: border-box;
-  position: relative;
 }
 /* NAVİGATOR */
 .header-nav {
@@ -42,6 +41,23 @@ body {
 .div2 button {
   margin: 10px;
 }
+.sign-in {
+  padding: 8px 10px 8px 10px;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  background-color: rgb(8, 120, 211);
+  border-style: none;
+  cursor: pointer;
+}
+.menu-icon {
+  border-style: none;
+  background-color: white;
+  cursor: pointer;
+}
+.menu-icon img {
+  color: rgb(122, 122, 122);
+}
 /* GÖVDE */
 span img {
   position: fixed;
@@ -51,20 +67,127 @@ span img {
 }
 .search-google {
   position: absolute;
-  top: 46%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.search-google input {
-  margin: 20px 400px 0px 400px;
-  border-radius: 20px;
+.icon-search {
+  position: relative;
+  width: 610px;
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+}
+.search-icon {
+  border-radius: 60px;
+  border-color: rgb(211, 210, 209);
   width: 600px;
   height: 35px;
   padding: 20px;
 }
-.search-icon {
-  background-image: url(./images/images/google_microphone.png);
-  background-size: 20px 30px;
-  background-repeat: no-repeat;
-  background-position: right 20px center;
+.left-icon {
+  position: absolute;
+  border-radius: 10px;
+  top: 6px;
+  left: 20px;
+}
+.right-icon {
+  position: absolute;
+  border-radius: 10px;
+  top: 9px;
+  right: 20px;
+  cursor: pointer;
+}
+.left-icon1 {
+  width: 30px;
+  border-radius: 10px;
+}
+.right-icon2 {
+  width: 16px;
+  border-radius: 10px;
+}
+/* GÖVDE ALTI */
+.search-feeling {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  /*   margin-top: 600px; */
+}
+.search-feeling button {
+  margin: 10px;
+  padding: 15px;
+  border-radius: 5px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-style: none;
+  cursor: pointer;
+  color: rgb(122, 122, 122);
+}
+.search-feeling button:hover {
+  color: black;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.5px 2.5px 2.5px 1.5px;
+}
+.language-div {
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
+}
+.language-div a {
+  color: blue;
+  text-decoration: underline;
+}
+/* FOOTER */
+footer {
+  position: fixed;
+  bottom: 0;
+  background-color: rgb(245, 241, 236);
+  width: 100%;
+  color: rgb(122, 122, 122);
+}
+.canada {
+  padding: 10px;
+  border-top: 1px;
+  border-bottom: 1px;
+  border-left: 0px;
+  border-right: 0px;
+  border-style: solid;
+}
+.canada p {
+  margin-left: 10px;
+}
+.footer-finish {
+  padding: 10px;
+  border-top: 0px;
+  border-bottom: 1px;
+  border-left: 0px;
+  border-right: 0px;
+  border-style: solid;
+  height: 30px;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  align-items: center;
+}
+.left-footer {
+  float: left;
+}
+.right-footer {
+  float: right;
+}
+.left-footer a {
+  margin: 10px;
+}
+.right-footer a {
+  margin: 10px;
+}
+a {
+  text-decoration: none;
+  color: rgb(122, 122, 122);
+}
+a:hover {
+  color: rgb(122, 122, 122);
+  text-decoration: underline;
 }
